Fix options rendering issue on mobile
fixes https://github.com/proginosko/LeechBlockNG/issues/127

--- a/options.css
+++ b/options.css
@@ -84,10 +84,8 @@ body {
 	width: 408px;
 }
 
-#form-container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+#form {
+  text-align: center;
 }
 
 #tabs {
